--- a/app/src/main/res/layout/fragment_parameters.xml
+++ b/app/src/main/res/layout/fragment_parameters.xml
@@ -9,7 +9,7 @@
     android:background="#F3F2F8"
     >
 
-    <LinearLayout
+   <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="144dp"
         android:orientation="horizontal">
@@ -18,6 +18,15 @@
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/logold2"
+                android:layout_width="match_parent"
+                android:layout_height="99dp"
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@drawable/logold"
+                tools:layout_editor_absoluteX="72dp"
+                tools:layout_editor_absoluteY="114dp" />
 
             <ImageView
                 android:id="@+id/logold"
@@ -33,14 +42,18 @@
                 android:layout_width="121dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Ludivine Ducamp" />
+                android:text="Ludivine Ducamp"
+                android:textColor="@color/black"
+                />
 
             <TextView
                 android:id="@+id/textLD2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Développeuse android" />
+                android:text="Développeuse android"
+                android:textColor="@color/black"
+                />
 
         </LinearLayout>
 
@@ -54,7 +67,7 @@
                 android:layout_width="107dp"
                 android:layout_height="99dp"
                 android:layout_gravity="center_horizontal"
-                app:srcCompat="@drawable/logomh"
+                app:srcCompat="@drawable/logomh3"
                 tools:layout_editor_absoluteX="237dp"
                 tools:layout_editor_absoluteY="114dp" />
 
@@ -63,13 +76,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Martin Hauw" />
+                android:text="Martin Hauw"
+                android:textColor="@color/black"
+                />
             <TextView
                 android:id="@+id/textMH2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Graphiste" />
+                android:text="Graphiste"
+                android:textColor="@color/black"
+                />
         </LinearLayout>
 
     </LinearLayout>
@@ -103,7 +120,9 @@
             android:layout_height="62dp"
             android:layout_weight="1"
             android:text="Rejoins nous en en cliquant sur le bouton discord"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/black"
+            />
     </LinearLayout>
 
     <TextView
@@ -116,7 +135,9 @@
         android:layout_width="352dp"
         android:layout_height="38dp"
         android:layout_gravity="center_horizontal"
-        android:text="Un grand MERCI à Andrew Backes de m'avoir laissé la possibilité d'utiliser son API! " />
+        android:text="Un grand MERCI à Andrew Backes de m'avoir laissé la possibilité d'utiliser son API! "
+        android:textColor="@color/black"
+        />
     <TextView
         android:id="@+id/textView21"
         android:layout_width="match_parent"
@@ -126,12 +147,242 @@
         android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:text="Pokémon TCG Guru by Andrew Backes "
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/black"
+        />
 
     <TextView
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:text="All data made available by the Pokémon TCG API"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/black"
+        />
+        -->
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="156dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="236dp"
+            android:layout_height="112dp"
+            android:layout_weight="1" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="117dp"
+            android:layout_height="112dp"
+            android:src="@drawable/logold"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="236dp"
+            android:layout_height="112dp"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill_horizontal"
+                android:layout_weight="1"
+                android:text="Créatrice de l'app"
+                android:textColor="@color/blue"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="177dp"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:text="Ludivine Ducamp"
+                tools:textStyle="bold" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="85dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="236dp"
+            android:layout_height="112dp"
+            android:layout_weight="1" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image2"
+            android:layout_width="117dp"
+            android:layout_height="112dp"
+            android:src="@drawable/logomh3"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="236dp"
+            android:layout_height="112dp"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="116dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="match_parent"
+                android:layout_height="129dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="159dp"
+                android:layout_weight="1"
+                android:text="Graphiste"
+                android:textColor="@color/blue"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="188dp"
+                android:layout_height="159dp"
+                android:layout_weight="1"
+                android:text="Martin Hauw"
+                tools:textStyle="bold" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="88dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="236dp"
+            android:layout_height="112dp"
+            android:layout_weight="1" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image3"
+            android:layout_width="117dp"
+            android:layout_height="112dp"
+            android:src="@drawable/andrew"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="236dp"
+            android:layout_height="112dp"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="116dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="129dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="match_parent"
+                android:layout_height="159dp"
+                android:layout_weight="1"
+                android:text="Un grand merci"
+                android:textColor="@color/blue"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="match_parent"
+                android:layout_height="159dp"
+                android:layout_weight="1"
+                android:text="Andrew Backes, créateur de Pokémon TCG API"
+                tools:textStyle="bold" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="88dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView19"
+            android:layout_width="47dp"
+            android:layout_height="111dp"
+            android:layout_weight="1" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image4"
+            android:layout_width="111dp"
+            android:layout_height="112dp"
+            android:src="@drawable/discord2"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="38dp"
+            android:layout_height="111dp"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="209dp"
+            android:layout_height="111dp"
+            android:background="@drawable/button_selector"
+            android:layout_gravity="center_horizontal"
+            android:text="Rejoins nous"
+            android:textColor="@color/blue"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
 </LinearLayout>
