--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/favorisFragment2"
+        android:id="@+id/navigation_listfavoris"
         android:icon="@drawable/ic_star"
         android:title="@string/title_favoris" />
 
@@ -11,7 +11,7 @@
         android:title="@string/title_card" />
 
     <item
-        android:id="@+id/parameter"
+        android:id="@+id/navigation_parameters"
         android:icon="@drawable/ic_settings"
         android:title="@string/title_parameter" />
 </menu>
