--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,16 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="162dp" />
 
-    <ImageView
-        android:id="@+id/imageView2"
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/loadinganimation"
+        android:layout_gravity="center_horizontal"
         android:layout_width="253dp"
         android:layout_height="244dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/pcp"
-        app:layout_constraintBottom_toTopOf="@+id/text_home"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.556" />
+        android:src="@drawable/home_animation" />
 
     <TextView
         android:id="@+id/text_home"
