--- a/app/src/main/res/layout/fragment_parameters.xml
+++ b/app/src/main/res/layout/fragment_parameters.xml
@@ -16,7 +16,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="156dp"
+        android:layout_height="113dp"
         android:orientation="horizontal">
 
         <TextView
@@ -65,18 +65,51 @@
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="177dp"
-                android:layout_height="75dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Ludivine Ducamp"
+                android:textColor="@color/black"
                 tools:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="39dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/linkedin" />
+
+                <Button
+                    android:id="@+id/button5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="39dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/github" />
+
+                <TextView
+                    android:id="@+id/textView24"
+                    android:layout_width="175dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView30"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="46dp"
+        android:layout_height="12dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -107,15 +140,15 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView17"
+                android:id="@+id/textView33"
                 android:layout_width="match_parent"
-                android:layout_height="129dp"
+                android:layout_height="1dp"
                 android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
-                android:layout_height="159dp"
+                android:layout_height="9dp"
                 android:layout_weight="1"
                 android:text="Graphiste"
                 android:textColor="@color/blue"
@@ -124,11 +157,39 @@
 
             <TextView
                 android:id="@+id/textView9"
-                android:layout_width="188dp"
-                android:layout_height="159dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
                 android:layout_weight="1"
                 android:text="Martin Hauw"
+                android:textColor="@color/black"
                 tools:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="39dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/linkedin" />
+
+                <Button
+                    android:id="@+id/button7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="39dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/portfolio" />
+
+                <TextView
+                    android:id="@+id/textView31"
+                    android:layout_width="175dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -182,16 +243,11 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="match_parent"
-                android:layout_height="129dp"
-                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="match_parent"
-                android:layout_height="159dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Un grand merci"
                 android:textColor="@color/blue"
@@ -201,10 +257,37 @@
             <TextView
                 android:id="@+id/textView16"
                 android:layout_width="match_parent"
-                android:layout_height="159dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Andrew Backes, créateur de Pokémon TCG API"
+                android:textColor="@color/black"
                 tools:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="39dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/linkedin" />
+
+                <Button
+                    android:id="@+id/button9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/site" />
+
+                <TextView
+                    android:id="@+id/textView34"
+                    android:layout_width="175dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
         </LinearLayout>
 
