--- a/app/src/main/res/layout/custom_marker_view.xml
+++ b/app/src/main/res/layout/custom_marker_view.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="60dp"
     android:layout_height="60dp"
-    android:background="@drawable/button_selector">
+    android:background="@drawable/button_selector"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:textColor="@color/black"
+        android:textSize="9sp"
+        />
 
     <TextView
         android:id="@+id/tvContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
+        android:layout_height="40dp"
         android:ellipsize="end"
-        android:singleLine="true"
-        android:textSize="12sp" />
-</RelativeLayout>
+        android:textColor="@color/black"
+        android:textSize="11sp" />
+
+
+
+</LinearLayout>
