--- a/app/src/main/res/layout/fragment_favoris.xml
+++ b/app/src/main/res/layout/fragment_favoris.xml
@@ -5,6 +5,8 @@
     android:orientation="vertical"
     tools:context=".ui.favoris.FavorisFragment"
     android:background="#F3F2F8"
+    android:id="@+id/root_layout"
+
     >
 
     <TextView
@@ -21,6 +23,41 @@
         android:textStyle="bold"
         android:text="@string/updateFavoris"
         android:textColor="@color/black" />
+
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="44dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <SearchView
+            android:id="@+id/search_view"
+            android:layout_width="324dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_selector"
+            android:queryHint="Nom de la carte"
+            android:theme="@style/WhiteCursorSearchView"
+            android:textColor="@color/black">
+
+        </SearchView>
+
+        <TextView
+            android:id="@+id/textView25"
+            android:layout_width="44dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView"
