--- a/app/src/main/res/layout/fragment_cardsearch.xml
+++ b/app/src/main/res/layout/fragment_cardsearch.xml
@@ -51,7 +51,7 @@
         tools:ignore="LabelFor" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/researchButton"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -62,11 +62,23 @@
         />
 
     <TextView
+        android:id="@+id/textView27"
+        android:layout_width="match_parent"
+        android:layout_height="40dp" />
+
+    <Button
+        android:id="@+id/extensionButton"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/button_selector"
+        android:text="Recherche par extension"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_height="140dp" />
-
-    <!-- android:background="@drawable/redbutton"-->
-
 
 </LinearLayout>
